# placo-examples

biped/: alpha_squatting_dyn.py  alpha_squatting_kin.py  dynamicSquat.py  squatting.py
dynamics/: sigmaban.py
kinematics/: dummyBiped.py  omniwheel.py  rby1.py
models/250226_DummyBipedURDF/: CMakeLists.txt  package.xml
models/250226_DummyBipedURDF/meshes/: Ankle_AA_L_Link.STL  Ankle_AA_R_Link.STL  Elbow_Yaw_L_Link.STL  Hip_AA_R_Link.STL  Hip_Yaw_R_Link.STL  Leg_Yaw_R_Link.STL  Neck_FE_Link.STL  Shoulder_AA_R_Link.STL  Shoulder_FE_L_Link.STL  Shoulder_FE_R_Link.STL  Torso_AA_Link.STL  Torso_Yaw_Link.STL  Wrist_AA_R_Link.STL  (+2 more)
models/a1_alpha_biped_concept_urdf/: CMakeLists.txt  package.xml
models/a1_alpha_biped_corrected_mass/: CMakeLists.txt  package.xml
models/prealpha_description/: CMakeLists.txt  README.md  package.xml
models/prealpha_description/control/: 2f_85.ros2_control.xacro  isaacsim.ros2_control.xacro  mock_components.ros2_control.xacro  mujoco.ros2_control.xacro  real.ros2_control.xacro  ros2_controllers.yaml
models/prealpha_description/launch/: controllers_bringup.launch.py
models/prealpha_description/meshes/: prealpha_head.stl  prealpha_neck.stl
models/prealpha_description/rviz/: config.rviz  interactive_markers.rviz  view_bench_head.rviz  view_full_robot_urdf.rviz
models/prealpha_description/srdf/: prealpha.srdf
models/prealpha_description/urdf/: bench_prealpha_head.urdf  leader_arm.urdf  model.urdf  prealpha.urdf.xacro  prealpha_head.urdf
walk/: com_planning_alpha.py  footsteps_planner.py  walk.py  walk_alpha.py  walk_squat.py
(+62 files in other folders)
