<?xml version="1.0"?>
<package format="3">
  <name>prealpha_description</name>
  <version>1.0.0</version>
  <description>
    ROS 2 description for prealpha robot
  </description>
  <maintainer email="juru@skl.vc">Jafar Uruc</maintainer>
  <license>Proprietary</license>
  <exec_depend>python3-jinja2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>topic_based_ros2_control</exec_depend>
  <exec_depend>prealpha_launch_utils</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
